--- a/doc/talk/talk.bib
+++ b/doc/talk/talk.bib
@@ -7,3 +7,14 @@
   pages        = {198--207},
   year         = {2023}
 }
+@inproceedings{DBLP:conf/ijcai/BroeckTMDR11,
+  author          = {Guy {Van den Broeck} and Nima Taghipour and Wannes Meert
+                  and Jesse Davis and Luc {De Raedt}},
+  title           = {Lifted Probabilistic Inference by First-Order Knowledge
+                  Compilation},
+  booktitle       = {{IJCAI}},
+  pages           = {2178--2185},
+  publisher       = {{IJCAI/AAAI}},
+  year            = {2011},
+  doi             = {10.5591/978-1-57735-516-8/IJCAI11-363}
+}
